syntax = "proto3";

package registration;

service UserRegistration {
  rpc RegisterUser (RegistrationRequest) returns (RegistrationResponse) {}
}


message RegistrationRequest {
  string first_name = 1;
  string phone = 2;
  string second_name = 3;
  string last_name = 4;
  string description = 5;
  string login = 6;
  string hash = 7;
  repeated Case cases = 8;
}


message Case {
  string question = 1;
  string answer = 2;
}

message RegistrationResponse {
  int32 status = 1;
  UserMessage message = 2;
}

message UserMessage {
  string id = 1;
  string description = 2;
  string notificationToken = 3;
  int32 status = 4;
  int32 messages_count = 5;
  string first_name = 6;
  string phone = 7;
  string second_name = 8;
  string last_name = 9;
  string login = 10;
  string hash = 11;
  string icon = 12;
  string secret_key = 13;
  string vox = 14;
  string vox_pwd = 15;
  string token = 16;
  string refreshToken = 17;
}